@@ -3,6 +3,7 @@ Version: 1.1.4
 Date: ????
   Changes:
     - Improved inserter throughput text size for high resolution displays with higher pixel density
+    - Added hack to support Remote Configuration
   Bugfixes:
     - Fixed white drop highlight being drawn above green drop highlight
     - Fixed error when loading save where an actively-being-adjusted-inserter's prototype was removed
